ensure text remains visible during webfont load

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -1,5 +1,4 @@
 //Typefaces
-$san-franscisco: "San-Francisco", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 $armata: "Armata", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 $open-sans: "Open Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 
@@ -59,22 +58,9 @@ $base-box-shadow-hover: 0 2px 5px rgba(0,0,0,0.1);
 $base-background-color: #11151D;
 $secondary-background-color: tint($base-border-color, 75%);
 
-//Forms
-$form-box-shadow: inset 0 0 0 rgba(#000, 0.06);
-$form-box-shadow-focus: $form-box-shadow, 0 0 0 adjust-color($primary-color, $lightness: -5%, $alpha: -0.3);
-
 //Animations
 $base-duration: 200ms;
 $base-timing: ease-in-out;
 $base-transition: all $base-duration $base-timing;
 $base-delay: 750ms;
 $cubic-bezier: cubic-bezier(0.010, 0.800, 0.355, 1.000);
-
-//Buttons
-$btn-font-size: $base-font-size;
-$btn-color: $primary-color;
-$btn-shadow-light: $base-box-shadow-hover;
-$btn-shadow: $base-box-shadow;
-$btn-color-hover: lighten($btn-color, 10%);
-$btn-color-text: #fff;
-$btn-color-icon: $btn-color-text;
